--- a/PasswordNoteBook.csproj
+++ b/PasswordNoteBook.csproj
@@ -9,7 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="fonts\Handwriting-Regular.ttf" />
+    <None Remove="images\background.png" />
+    <None Remove="images\lock.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="fonts\Handwriting-Regular.ttf" />
+    <Resource Include="images\background.png" />
+    <Resource Include="images\lock.png" />
   </ItemGroup>
 
 </Project>
