added option for pin
Made the user able to set a pin

--- a/PasswordNoteBook.csproj
+++ b/PasswordNoteBook.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="audio\PageFlip.wav" />
     <None Remove="fonts\Handwriting-Regular.ttf" />
     <None Remove="images\background.png" />
     <None Remove="images\lock.png" />
@@ -19,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="audio\PageFlip.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Resource Include="fonts\Handwriting-Regular.ttf" />
     <Resource Include="images\background.png" />
     <Resource Include="images\lock.png" />
