--- a/PasswordNoteBook.csproj
+++ b/PasswordNoteBook.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <None Remove="audio\PageFlip.wav" />
+    <None Remove="audio\Unlock.wav" />
+    <None Remove="audio\Writing.wav" />
     <None Remove="fonts\Handwriting-Regular.ttf" />
     <None Remove="images\background.png" />
     <None Remove="images\lock.png" />
@@ -21,6 +23,12 @@
 
   <ItemGroup>
     <Content Include="audio\PageFlip.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="audio\Unlock.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="audio\Writing.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Resource Include="fonts\Handwriting-Regular.ttf" />
